<resources>
    <string name="app_name">Pictures</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="menu_search">Search</string>
    <string name="about_title">About</string>
    <string name="theme_title">Theme</string>
    <string name="category_title">Category</string>
    <string name="collection_title">Collection</string>
    <string name="home_title">Home</string>

    <string name="view_navigation_close">Close</string>
    <string name="view_navigation_open">Open</string>

    <string name="new_tab_name">New</string>
    <string name="curated_tab_name">Curated</string>
    <string name="btn_follow">Follow</string>
    <string name="recycler_tv_like_count">like_count</string>
</resources>
